Fix revhuman case

--- a/frontend/src/assets/_home.scss
+++ b/frontend/src/assets/_home.scss
@@ -86,13 +86,13 @@
 .left {
   position: absolute;
   left: 0;
-  width: 24rem;
+  width: 24vh;
   top: 0;
 }
 
 .right {
   position: absolute;
   right: 0;
-  width: 24rem;
+  width: 24vh;
   bottom: 0;
 }
